# embedded_linux_skeleton

./: .travis.yml  Makefile  QEMU_command.txt  README.md  fakeroot.sh  image.its
applications/: Makefile
applications/busybox/: Makefile
applications/cloud_cam/: Makefile  cloud_cam.cpp  cloud_cam.h  ffmpeg_rtsp_over_http_proxy.diff  main.cpp  mqtt_client.cpp  nmap_scan.cpp
applications/cloud_cam/python_tools/: publish.py  subscribe.py
applications/dnsmasq/: Makefile  dnsmasq-2.79_pi_3_b.tar.xz
applications/dropbear/dropbear-2018.76/: Makefile  Makefile.in  localoptions.h  netio.c  svr-tcpfwd.c
applications/event_manager/: Makefile  eventNotification.cpp  eventNotification.h  event_manager.cpp  event_manager.h  main.cpp
applications/hello_world_app/: Makefile  hello_world  main.c  main.cpp
applications/hiawatha/hiawatha/: CMakeLists.txt  ChangeLog  Makefile
applications/hiawatha/hiawatha-10.8.1/: CMakeFiles.txt  INSTALL  Makefile  README.md  config.h.in
applications/hiawatha/hiawatha-10.8.1/mbedtls/: CMakeLists.txt  upgrade
applications/hiawatha/hiawatha-10.8.1/mbedtls/include/mbedtls/: config.h
applications/hiawatha/hiawatha/config/: hiawatha.conf.in
applications/hiawatha/hiawatha/extra/: make_debian_extra  make_macos_package  make_source_package
applications/hiawatha/hiawatha/extra/debian/: hiawatha.service  info
applications/hiawatha/hiawatha/extra/letsencrypt/libraries/: config.php  hiawatha_config.php  http.php  letsencrypt.php  openssl.conf
applications/hiawatha/hiawatha/extra/letsencrypt/scripts/: mail.example.org
applications/hiawatha/hiawatha/extra/macos/: org.hiawatha-webserver.httpd.plist
applications/hiawatha/hiawatha/extra/redhat/: hiawatha.spec
applications/hiawatha/hiawatha/extra/windows/: Hiawatha.bat  Service.bat
applications/hiawatha/hiawatha/man/: cgi-wrapper.1.in
applications/hiawatha/hiawatha/src/: challenge.c  client.h  envir.c  hiawatha.c  ip.c  liblist.h  monitor.h  rproxy.h  ssi-cgi.c  tls.c  tomahawk.c  workers.c  workers.h
applications/hostapd/: Makefile  hostapd-2.6_pi_3_b.tar.xz
applications/iptables/: Makefile  iptables-1.6.2_pi_3_b.tar.xz
applications/iw/: Makefile  iw-4.9_pi_3_b.tar.xz
applications/lib_app/: Makefile  backtrace_signal.cpp  backtrace_signal.h  conversion.cpp  conversion.h  cpu_stat.cpp  cpu_stat.h  defines.h  ini.cpp  ini.h  netlink_socket.cpp  netlink_socket.h  rpcMessage.cpp  rpcMessage.h  rpcMessageAddr.cpp  rpcMessageAddr.h  rpcMessageCpuHistory.cpp  rpcUnixClient.cpp  rpcUnixClient.h  rpcUnixServer.cpp  rpcUnixServer.h  rpc_unix.cpp  rpc_unix.h  service.cpp  service.h  simpleTimerSync.cpp  simpleTimerSync.h  user.cpp  user.h  utilities.cpp  utilities.h
applications/lib_app/libfdt/: fdt.h  fdt_ro.cpp
applications/lib_app/rpc/: rpcMessage.cpp  rpcMessage.h  rpcMessageAddr.cpp  rpcMessageAddr.h  rpcMessageAuthentication.cpp  rpcMessageAuthentication.h  rpcMessageCpuHistory.cpp  rpcMessageCpuHistory.h  rpcMessageEvents.cpp  rpcMessageEvents.h  rpcMessageFirmware.cpp  rpcMessageFirmware.h  rpcMessageOpenvpn.cpp  rpcMessageOpenvpn.h  rpcMessageResourceHistory.cpp  rpcMessageResourceHistory.h  rpcMessageTime.cpp  rpcMessageTime.h  rpcMessageUsers.cpp  rpcMessageUsers.h  rpcMessageWifiSetting.cpp  (+4 more)
applications/lib_fastcgi/: Makefile  Makefile.am  configure.in
applications/lib_rpc/: Makefile  rpc_unix.cpp
applications/libnl/: Makefile
applications/network_manager/: Makefile  main.c  main.cpp  network_manager.c  network_manager.cpp  network_manager.h  serviceDhcpC.cpp  serviceDhcpC.h  serviceDnsmasq.cpp  serviceDnsmasq.h  serviceHostapd.cpp  serviceHostapd.h
applications/nmap/: Makefile
applications/noip-2.1.9-1/: Makefile  noip2
applications/ntp/: Makefile  ntp-4.2.8p8_arm_vexpress_a9.tar.xz  ntp-4.2.8p8_pi_3_b.tar.xz
applications/openssl/: Makefile  openssl-1.0.2p_arm_vexpress_a9.tar.xz
applications/openvpn/: Makefile  openvpn-2.4.6_pi_3_b.tar.xz  openvpn.conf
applications/resource_manager/: Makefile  main.cpp  resourceCollector.cpp  resourceCollector.h  resource_manager.cpp  resource_manager.h
applications/system_manager/: Makefile  firmwareManager.cpp  firmwareManager.h  main.c  main.cpp  openVpnManager.cpp  openVpnManager.h  resourceCollector.cpp  resourceCollector.h  service.cpp  service.h  serviceHiawatha.cpp  serviceHiawatha.h  serviceNtp.cpp  serviceNtp.h  serviceOpenvpn.cpp  serviceOpenvpn.h  service_hiawatha.cpp  service_hiawatha.h  system_manager.c  system_manager.cpp  system_manager.h  timeManager.cpp  timeManager.h  userManager.cpp  userManager.h
applications/web_server/: Makefile
build_cache/: ._get_uboot_arm_vexpress_a9_cache.sh  ec1a7e7ef4642ba428d4046ef183cadcecd66c15_build_arm_vexpress_a9_uboot.tar.xz  ec1a7e7ef4642ba428d4046ef183cadcecd66c15_build_pi_3_b_uboot.tar.xz  ec1a7e7ef4642ba428d4046ef183cadcecd66c15_build_pi_b_plus_uboot.tar.xz  get_buildroot_arm_vexpress_a9_cache.sh  get_buildroot_cache_name.sh  get_buildroot_orange_pi_zero_cache.sh  get_buildroot_pi_3_b_cache.sh  get_linux_arm_vexpress_a9_cache.sh  get_linux_orange_pi_zero_cache.sh  get_linux_pi_3_b_cache.sh  get_linux_pi_b_plus_cache.sh  get_uboot_arm_vexpress_a9_cache.sh  get_uboot_orange_pi_zero_cache.sh  get_uboot_pi_3_b_cache.sh  get_uboot_pi_b_plus_cache.sh
build_scripts/: fakeroot.sh  fw_bcm2835_rpi_b_plus.its
configs/: boot.cmd
configs/arm_vexpress_a9/: Makefile.variable
configs/buildroot/: config
configs/linux/: config
configs/orange_pi_zero/: Makefile.variable
configs/pi_3_b/: Makefile.variable
configs/pi_b_plus/: Makefile.variable
configs/uboot/: config
linux-4.14.22/: MAINTAINERS
linux/linux_custom_mod/: Makefile  ethernet_flow.c  ethernet_flow.h  ethernet_flow_core.c  ethernet_flow_macs.c  ethernet_flow_statistics.c  hello_world.c
pi-boot/: cmdline.txt  config.txt  issue.txt
qemu_scripts/: QEMU_command.txt  dhcpd.py  minimumTFTP.py  qemu-ifup.sh  qemu_kernel_roofs_start.sh  qemu_uboot_start.sh
u-boot_v2018.05-rc1/cmd/: fat.c
u-boot_v2018.05-rc1/common/: Makefile  firmware_number.c
u-boot_v2018.05-rc1/include/: config_distro_bootcmd.h
(+380 files in other folders)
